# Yet

./: .clang-format  .gitconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  NOTICE.md  README.md
docs/: CMakeLists.txt  README.md  doxyfile.in  main.md
include/: CMakeLists.txt  README.md  yet.h
include/yet/: yet.h
scripts/: README.md  setup.sh
src/: CMakeLists.txt  README.md  yet.c
tests/: README.md
